Changes for 4.0.6rc1

New features:
...G...... [ZBXNEXT-4898] added support IPv6 for "net.dns" and "net.dns.record" (MVekslers)
.......PS. [ZBXNEXT-5037] added "skip" parameter for vmware.eventlog key (MVekslers)
..F....... [ZBXNEXT-4819] implemented date and time showing in SVG graph widget (miks)

Bug fixes:
..F....... [ZBX-15548] fixed resolving of {ITEM.VALUE} macro in the trigger description (Sasha)
........S. [ZBX-15774] fixed memory leak in housekeeper when elasticsearch is used (vso)
........S. [ZBX-15788] fixed crash when substituting LLD macros in calculated item formula expression (vso)
..F....... [ZBX-15608] fixed when Widget Graph show disabled trigger/problem (vasilijs)
..F....... [ZBX-10397] fixed when global messaging severities unchecked if profile saved earlier (ashubin, vasilijs)
A.F....... [ZBX-15596] fixed when widget in frontend can be created larger than API validation supports (ashubin, vasilijs)
..F....... [ZBX-15308] fixed timeselector in screens when page is opened with link containing sid argument (ashubin, gcalenko)
..F....... [ZBX-15694] fixed trimming of empty spaces for custom multiplier in item and item prototype preprocessing forms (Ivo)
..F....... [ZBX-15196] fixed "Follow redirects" checkbox not being enabled by default for HTTP agent in item, item prototype and LLD rule create forms (Ivo)
.......PS. [ZBX-15670] fixed inefficient vmware eventlog downloading (MVekslers)
..F....... [ZBX-15483] fixed undefined index in Item Prototype update (vasilijs)
..F....... [ZBX-15270] fixed graph widget configuration form cross browser issues (agriscenko)
..F....... [ZBX-15300] fixed widgets extra space at the bottom (ashubin, vasilijs)
...G...... [ZBX-8091] added alphabetic ordering of net.dns.record respond (akozlovs)
..F....... [ZBX-15707] fixed check box design when drag and drop an interface into SNMP (vasilijs)
..F....... [ZBX-15535] fixed validation of min/max value range in graph widget; fixed translation string in graph widget (miks)